--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_core: ^2.16.0
+  firebase_database: ^10.2.6
+  firebase_ui_auth: ^1.8.0
+  firebase_ui_oauth_google: ^1.2.11
+  firebase_auth: ^4.10.0
   flutter:
     sdk: flutter
 
@@ -45,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
