--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,6 @@ environment:
 dependencies:
   firebase_core: ^2.16.0
   firebase_database: ^10.2.6
-  firebase_ui_auth: ^1.8.0
-  firebase_ui_oauth_google: ^1.2.11
-  firebase_auth: ^4.10.0
   flutter:
     sdk: flutter
 
@@ -40,6 +37,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutterfire_ui: ^0.4.3+20
+  firebase_auth: ^4.15.3
+  google_fonts: ^6.1.0
+  go_router: ^12.1.3
+  quickalert: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
