--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   google_fonts: ^6.1.0
   go_router: ^12.1.3
   quickalert: ^1.0.2
+  firebase_storage: ^11.6.5
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
