--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  firebase_core: ^2.16.0
+  firebase_core: ^2.25.4
   firebase_database: ^10.2.6
   flutter:
     sdk: flutter
@@ -39,11 +39,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutterfire_ui: ^0.4.3+20
   firebase_auth: ^4.15.3
-  google_fonts: ^6.1.0
-  go_router: ^12.1.3
+  go_router: ^13.2.0
   quickalert: ^1.0.2
-  firebase_storage: ^11.6.5
   flutter_rating_bar: ^4.0.1
+  flutterflow_ui: ^0.2.0+1
+  file_picker: ^6.1.1
+  firebase_storage: ^11.6.5
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/Account/
+    - assets/Login/
+    - assets/Rating/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
